## tslib 1.7

Changes since last release:
* ts_read_mt() now consistently returns errno set by read() when using
  module_raw input
* extended ts_print_mt to test more of our API
* basic support for the Haiku OS
* added a release helper script to simplify the releasing process
* add proper AUTHORS and THANKS files, as well as .mailmap
* bugfixes
  - 6ea643e ts_test_mt: fix idev commandline option
  - 9617c7d dmc-raw: fix errno return code to be negative
  - dc2fdaf input-raw: remove errror message on each negative return from read()
  - 75b5f40 input-raw: return read() errno on error.


## tslib 1.6

Changes since the last release:
* ABI addition: libts.so.0 (ensuring backwards compatibility)
* tools/ts_uinput_start.sh that creates /dev/input/ts_uinput
* improved documentation in README
* support for FreeBSD (experimental)
* bugfixes and performance improvements
  - 3b01897 skip: fix order of memory freeing in finish routine
  - 9ed4eca skip: avoid unnecessary malloc during operation
  - f9202cc median: fix memory cleanup
  - 69444b9 input-raw: improve input definitions backwards compatibility


## tslib 1.5

Changes since 1.4 are:
* restore full backwards compatibility for all old kernel headers
* 64 bit compatibility for test programs
* bugfixes
  - 3f99a83 Revert "plugins: linear: fix config file access"


## tslib 1.4

Most notable changes since 1.3 are:
* added default input device names (for example /dev/input/ts)
* new API: ts_setup()
* support for Android (experimental)
* man page updates and fixes
* compatibility fixes
* bugfixes all over the place


## tslib 1.3
merge released this on 09 Jan 2017

Most notable changes since 1.2 are:
* user visible:
    - multitouch:
      tests/ts_print_mt
      tests/ts_print_raw_mt
      tests/ts_test_mt
    - tools/ts_uinput: daemon program offers an input event device to use, instead of tslib's API
    - new filter plugin: median filter
    - man pages

* user API:
    - ts_read_mt() and struct ts_sample_mt