@@ -14,7 +14,7 @@ AM_CPPFLAGS		= -I$(top_srcdir)/src
 if HAIKU
 bin_PROGRAMS		= ts_print ts_print_raw ts_finddev
 else
-bin_PROGRAMS		= ts_test ts_test_mt ts_calibrate ts_print ts_print_mt ts_print_raw ts_print_raw_mt ts_harvest ts_finddev
+bin_PROGRAMS		= ts_test ts_test_mt ts_calibrate ts_print ts_print_mt ts_print_raw ts_harvest ts_finddev
 endif
 
 ts_test_SOURCES		= ts_test.c testutils.c testutils.h fbutils.h font_8x8.c font_8x16.c font.h
@@ -41,9 +41,6 @@ ts_print_mt_LDADD	= $(top_builddir)/src/libts.la
 
 ts_print_raw_SOURCES	= ts_print_raw.c
 ts_print_raw_LDADD	= $(top_builddir)/src/libts.la
-
-ts_print_raw_mt_SOURCES	= ts_print_raw_mt.c
-ts_print_raw_mt_LDADD	= $(top_builddir)/src/libts.la
 
 ts_calibrate_SOURCES	= ts_calibrate.c fbutils.h testutils.c testutils.h font_8x8.c font_8x16.c font.h
 ts_calibrate_LDADD	= $(top_builddir)/src/libts.la
