@@ -29,7 +29,7 @@
 
 void usage(char **argv)
 {
-	printf("Usage: %s [--non-blocking] [-s samples] [-i <device>]\n", argv[0]);
+	printf("Usage: %s [--raw] [--non-blocking] [-s samples] [-i <device>]\n", argv[0]);
 }
 
 int main(int argc, char **argv)
@@ -42,6 +42,7 @@ int main(int argc, char **argv)
 	int ret, i, j;
 	int read_samples = 1;
 	short non_blocking = 0;
+	short raw = 0;
 
 	while (1) {
 		const struct option long_options[] = {
@@ -49,10 +50,11 @@ int main(int argc, char **argv)
 			{ "idev",         required_argument, 0, 'i' },
 			{ "samples",      required_argument, 0, 's' },
 			{ "non-blocking", no_argument,       0, 'n' },
+			{ "raw",          no_argument,       0, 'r' },
 		};
 
 		int option_index = 0;
-		int c = getopt_long(argc, argv, "hi:s:n", long_options, &option_index);
+		int c = getopt_long(argc, argv, "hi:s:nr", long_options, &option_index);
 
 		errno = 0;
 		if (c == -1)
@@ -69,6 +71,10 @@ int main(int argc, char **argv)
 
 		case 'n':
 			non_blocking = 1;
+			break;
+
+		case 'r':
+			raw = 1;
 			break;
 
 		case 's':
@@ -124,7 +130,11 @@ int main(int argc, char **argv)
 	}
 
 	while (1) {
-		ret = ts_read_mt(ts, samp_mt, max_slots, read_samples);
+		if (raw)
+			ret = ts_read_raw_mt(ts, samp_mt, max_slots, read_samples);
+		else
+			ret = ts_read_mt(ts, samp_mt, max_slots, read_samples);
+
 		if (ret < 0) {
 			if (non_blocking) {
 				printf("ts_print_mt: read returns %d\n", ret);
